Closed
Bug 1884119
Opened 2 years ago
Closed 2 years ago
obj-x86_64-pc-solaris2.11/dist/include/AudioSampleFormat.h:69:34: error: ‘numeric_limits’ is not a member of ‘std’
Categories
(Core :: Audio/Video: Web Codecs, defect)
Core
Audio/Video: Web Codecs
Tracking
()
RESOLVED
FIXED
125 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox123 | --- | unaffected |
| firefox124 | --- | unaffected |
| firefox125 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: padenot)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Steps to reproduce:
Build on Solarid failed with:
12:20.46 /builds/psumbera/mozilla-central-build/obj-x86_64-pc-solaris2.11/dist/include/AudioSampleFormat.h:69:34: error: ‘numeric_limits’ is not a member of ‘std’
12:20.46 69 | return static_cast<float>(std::numeric_limits<T>::max());
12:20.46 | ^~~~~~~~~~~~~~
12:20.46 /builds/psumbera/mozilla-central-build/obj-x86_64-pc-solaris2.11/dist/include/AudioSampleFormat.h:69:50: error: expected primary-expression before ‘>’ token
12:20.46 69 | return static_cast<float>(std::numeric_limits<T>::max());
12:20.46 | ^
12:20.46 /builds/psumbera/mozilla-central-build/obj-x86_64-pc-solaris2.11/dist/include/AudioSampleFormat.h:69:53: error: ‘::max’ has not been declared; did you mean ‘std::max’?
12:20.47 69 | return static_cast<float>(std::numeric_limits<T>::max());
12:20.47 | ^~~
12:20.47 | std::max
..
This is regression from fix for Bug 1858958.
| Reporter | ||
Updated•2 years ago
|
Comment 1•2 years ago
|
||
:padenot, since you are the author of the regressor, bug 1858958, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Flags: needinfo?(padenot)
| Assignee | ||
Comment 2•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → padenot
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 3•2 years ago
|
||
Set release status flags based on info from the regressing bug 1858958
status-firefox123:
--- → unaffected
status-firefox124:
--- → unaffected
status-firefox125:
--- → affected
status-firefox-esr115:
--- → unaffected
Updated•2 years ago
|
Component: Untriaged → Audio/Video: Web Codecs
Product: Firefox → Core
Pushed by padenot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/31978f6f4be1
Include limits to unbreak the build on Solaris. r=media-playback-reviewers,karlt
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(padenot)
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
| Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•