Bug 1884119 - Include limits to unbreak the build on Solaris. r=media-playback-reviewers,karlt

Differential Revision: https://phabricator.services.mozilla.com/D203913